@@ -1,6 +1,11 @@
 2015-10-31  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
+	  Added information from ANSI X3.304-1997 (MMC-1).
+
+2015-10-31  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
 	  Added information from SSC-2.
 
 2015-10-31  Natalia Portillo  <claunia@claunia.com>
